# sam-engine

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  main.cpp
CMake/: ALTERA_ENGINE.cbp  CMakeCache.txt  Makefile  SAM_ENGINE.cbp  cmake_install.cmake
Examples/Saminater/: main.cpp
Examples/Snake/: main.cpp
Examples/Snake/src/: Events.h  main.cpp
cmake-modules/: FindSDL2.cmake
include/: Logger.h  Text.h  TextureManager.h  Vector2.h  Vector2f.h  Vector2i.h  Window.h
include/Managers/: EntityManager.h  EventManager.h  GameManager.h  TextureManager.h
include/Vector2/: Float.h
source/: Logger.cpp  Text.cpp  Vector2.cpp  Window.cpp
source/Managers/: EntityManager.cpp  EventManager.cpp  GameManager.cpp  TextureManager.cpp
source/Vector2/: Float.cpp  Interger.cpp  Vector2f.cpp  Vector2i.cpp
src/: Logger.cpp  TextureManager.cpp  Window.cpp
